# cmake-external-project

./: CMakeLists.txt  main.cpp
